<resources>
    <string name="app_name">HopeFanc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">HopeFanc</string>
    <string name="nav_header_subtitle">www.HopeFanc.org</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home"> Home</string>
    <string name="menu_gallery"> Gallery</string>
    <string name="menu_slideshow"> Zoom </string>
    <string name="menu_sermon">sermon</string>
    <string name="Sermon">sermon</string>
    <string name="Followus">Book appointment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="skip">Skip</string>

    <string name="by_using_our_app_you_agree_our">By using our app, you agree our</string>
    <string name="terms_and_conditions">
        <a href="https://hopefanc.org/">Terms and Conditions</a>
    </string>
    <string name="and">and</string>
    <string name="privacy_policy">
        <a href="https://hopefanc.org/">Privacy Policy</a>
    </string>
    <string name="logout">Logout</string>
    <string name="donation">please any donation should be send to <b>hopefanc@gmail.com</b></string>

</resources>