<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/sermon"
            android:icon="@android:drawable/star_big_off"
            android:title="@string/Sermon" />
        <item
            android:id="@+id/bible"
            android:icon="?attr/homeAsUpIndicator"
            android:title="bible verses" />
        <item
            android:id="@+id/donation"
            android:icon="?android:attr/panelFullBackground"
            android:title="donation" />
        <item
            android:id="@+id/follow"
            android:icon="@android:drawable/checkbox_on_background"
            android:title="@string/Followus" />
        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="developer info" />
    </group>
</menu>