<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hopefanc.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.hopefanc.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.hopefanc.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/sermon"
        android:name="com.example.hopefanc.ui.Sermon.sermonFragment"
        android:label="sermon"
        tools:layout="@layout/fragment_sermon" />
    <fragment
        android:id="@+id/bible"
        android:name="com.example.hopefanc.ui.bible.bible"
        android:label="bible"
        tools:layout="@layout/fragment_bible" />
    <fragment
        android:id="@+id/donation"
        android:name="com.example.hopefanc.ui.donation.DonationFragment"
        android:label="donation"
        tools:layout="@layout/fragment_donation3" />
    <fragment
        android:id="@+id/contact"
        android:name="com.example.hopefanc.ui.contact.contact"
        android:label="contact"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/follow"
        android:name="com.example.hopefanc.ui.follow.followfragment"
        android:label="follow"
        tools:layout="@layout/fragment_follow2" />
</navigation>