<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoogleSignInActivity">

    <ImageView
        android:src="@drawable/peter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:background="@color/black_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:padding="5dp"
            android:src="@drawable/logo"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="2dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"/>


        <Button
            android:id="@+id/google_signIn_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="88dp"
            android:layout_marginRight="40dp"
            android:layout_below="@id/profileImage"
            android:background="@drawable/google_ripple"
            android:elevation="5dp"
            android:paddingStart="30dp"
            android:text="@string/sign_in_with_google"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry"
            android:gravity="center"
            android:layout_centerHorizontal="true"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_below="@id/google_signIn_btn"
            android:layout_marginTop="160dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/by_using_our_app_you_agree_our"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/terms_and_conditions"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textColorLink="@color/purple_500"
                    android:layout_marginEnd="2dp"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/and"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:layout_marginEnd="2dp"/>

                <TextView
                    android:id="@+id/privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:text="@string/privacy_policy"
                    android:textAlignment="center"
                    android:textColorLink="@color/purple_500"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>